--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
                   <ul class="effects__list">
                     <li class="effects__item">
                       <input type="radio" class="effects__radio  visually-hidden" name="effect" id="effect-none" value="none">
-                      <label for="effect-none" class="effects__label">
+                      <label for="effect-none" class="effects__label" tabindex="0">
                         <span class="effects__preview  effects__preview--none">Превью фото без эффекта</span>
                         Оригинал
                       </label>
                     </li>
                     <li class="effects__item">
                       <input type="radio" class="effects__radio  visually-hidden" name="effect" id="effect-chrome" value="chrome">
-                      <label for="effect-chrome" class="effects__label">
+                      <label for="effect-chrome" class="effects__label" tabindex="0">
                         <span class="effects__preview  effects__preview--chrome">Превью эффекта Хром</span>
                         Хром
                       </label>
