--- a/index.html
+++ b/index.html
@@ -235,6 +235,9 @@
   <template id="messages">
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
+<script src="js/data.js"></script>
+<script src="js/push.js"></script>
+<script src="js/scale.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
