--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
 <script src="js/data.js"></script>
 <script src="js/push.js"></script>
 <script src="js/scale.js"></script>
+<script src="js/helper.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
