--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                       </label>
                     </li>
                     <li class="effects__item">
-                      <input type="radio" class="effects__radio  visually-hidden" name="effect" id="effect-heat" value="heat" checked>
+                      <input type="radio" class="effects__radio  visually-hidden" name="effect" id="effect-heat" value="heat">
                       <label for="effect-heat" class="effects__label">
                         <span class="effects__preview  effects__preview--heat">Превью эффекта Зной</span>
                         Зной
@@ -235,10 +235,10 @@
   <template id="messages">
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
+<script src="js/form.js"></script>
 <script src="js/data.js"></script>
 <script src="js/push.js"></script>
+<script src="js/gallery.js"></script>
 <script src="js/scale.js"></script>
-<script src="js/helper.js"></script>
-<script src="js/main.js"></script>
 </body>
 </html>
