--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
 <script src="js/form.js"></script>
+<script src="js/render.js"></script>
 <script src="js/load.js"></script>
 <script src="js/gallery.js"></script>
 <script src="js/scale.js"></script>
