--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
   </template>
 <script src="js/form.js"></script>
 <script src="js/render.js"></script>
-<script src="js/load.js"></script>
+<script src="js/api.js"></script>
 <script src="js/gallery.js"></script>
 <script src="js/scale.js"></script>
 </body>
