устранил замечания из ревью

--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
 <script src="js/form.js"></script>
 <script src="js/render.js"></script>
 <script src="js/api.js"></script>
+<script src="js/utils.js"></script>
 <script src="js/gallery.js"></script>
 <script src="js/scale.js"></script>
 </body>
