вынес рендер сообщений в отдельный модуль

--- a/index.html
+++ b/index.html
@@ -242,6 +242,8 @@
 <script src="js/bigpicture.js"></script>
 <script src="js/gallery.js"></script>
 <script src="js/scale.js"></script>
+<script src="js/messages.js"></script>
+
 
 </body>
 </html>
