реализовал те моменты, что обсуждали по ревью, начал реализовывать недочеты по тз

--- a/index.html
+++ b/index.html
@@ -236,10 +236,10 @@
   </template>
 
 <script src="js/utils.js"></script>
-<script src="js/form.js"></script>
+<script src="js/open-form.js"></script>
 <script src="js/render.js"></script>
 <script src="js/api.js"></script>
-<script src="js/bigpicture.js"></script>
+<script src="js/render-big-pictures.js"></script>
 <script src="js/gallery.js"></script>
 <script src="js/scale.js"></script>
 <script src="js/messages.js"></script>
