--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
   </template>
 
 <script src="js/utils.js"></script>
+<script src="js/download-photo.js"></script>
 <script src="js/open-form.js"></script>
 <script src="js/render.js"></script>
 <script src="js/api.js"></script>
